# RusticPoker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
examples/gRPCurl/: Connect.md  CreateLobby.md  Disconnect.md  GetLobbies.md  GetLobbyState.md  JoinLobby.md  KickLobbyPlayer.md  LeaveLobby.md  README.md  RespondMatchmaking.md  SetLobbyMatchmakingStatus.md
proto/: rustic_poker.proto
src/: main.rs
src/common/: error.rs
src/game/: mod.rs  service.rs  state.rs
src/game/phase/: mod.rs  progression.rs
src/game/phase/poker/: impl.rs  mod.rs
src/game/phase/poker/phase/: betting.rs  drawing.rs  mod.rs
src/game/phase/poker/phase/drawing/: dealing.rs  discarding.rs  mod.rs
src/game/table/: credits.rs  mod.rs
src/lobby/: lobby.rs  mod.rs  registry.rs  settings.rs
src/match/: match.rs  mod.rs  registry.rs
src/output/: broadcaster.rs  mod.rs  proto.rs  structs.rs
src/player/: mod.rs  player.rs  registry.rs
src/proto/: rustic_poker.proto
src/service/: client.rs  game.rs  mod.rs
src/types/: card.rs  hand.rs  mod.rs
src/types/card/: mod.rs  proto.rs  rank.rs  suit.rs
src/types/deck/: mod.rs
src/types/game/: mod.rs
src/types/hand/: mod.rs  proto.rs  rank.rs  tie_breakers.rs
src/types/lobby/: grpc.rs  mod.rs  status.rs
src/types/player/: grpc.rs  mod.rs
src/types/stateful/: mod.rs
src/types/user/: mod.rs
