[package]
name = "RusticPoker"
version = "0.1.0"
edition = "2021"

[features]
default = ["conn_logging"]
conn_logging = []
dbg_ignore_client_addr = []

[dependencies]
thiserror = "1.0.56"
rand = "0.8.5"
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
itertools = "0.12.1"
tonic-reflection = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
