[package]
name = "RusticPoker"
version = "0.1.0"
edition = "2021"

[features]
default = ["conn_logging"]
conn_logging = []
dbg_peer_addr_spoofing = []

[dependencies]
thiserror = "1.0.56"
rand = "0.9.0"
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
itertools = "0.14.0"
tonic-reflection = "0.12.3"
async-stream = "0.3.5"
uuid = { version = "1.12.1", features = ["v4"] }
futures = "0.3.31"
chrono = "0.4.39"
prost-types = "0.13.4"

[build-dependencies]
tonic-build = "0.12.3"
